Add letter in nick

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section>
         <div class="title">
             <h1>ToDo List</h1>
-            <p>by Appesant ;)</p>
+            <p>by Appersant ;)</p>
         </div>
 
 
